second commit after merge

--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
     <title></title>
   </head>
   <body>
-<<<<<<< HEAD
-    <h1>commit 4 form branch : master.</h1>
-=======
     <h1>commit 5 form branch : second.</h1>
->>>>>>> second
 
+
+    <h2>This is hardik.</h2>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
