Third commit in master

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>commit 5 form branch : second.</h1>
 
 
-    <h2>This is hardik.</h2>
+    <h2>This is hardik from master branch.</h2>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
